CURRENT_PROJECT_VERSION = 81
[x] return tuple (authorized, limited) from PhotoLibrary.checkAuthorization
[x] no update if media item deleted
[x] store prefix mo- --> mo-1/

--- a/MoGallery/MoGallery/Info.plist
+++ b/MoGallery/MoGallery/Info.plist
@@ -26,5 +26,7 @@
 		<key>UISceneConfigurations</key>
 		<dict/>
 	</dict>
+    <key>PHPhotoLibraryPreventAutomaticLimitedAccessAlert</key>
+    <string>YES</string>
 </dict>
 </plist>
